# gamer-cm-api

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  swagger.json
.sqlx/: query-14c7be08a4333417a3177a3227e5ab2ef304e6e468d5af9af5fa7d330ad23a95.json  query-1a538c6a67df269ee5c4d6679e11c32d67a2f58efb84e9053c784066bc0381da.json  query-21be781d22f10c2e4135902c8e49cac75a226e501113979475c42f9e4cdb0129.json  query-282678bb3e8cb9d015a91315f2a68e01e34a8d36266edd82ea2a6f9cff8f7f94.json  query-29ee263c5d011ff1133baf5f83abe9d34507d7fc2d2c6836b60a6f96de2d75ea.json  query-2efda5ec5c9d78231c1c30291f1e855fbf5cce1992a187d900993e3fe0b80f66.json  query-3168c93a67274166e3234aa5dae82145a6f963f2ff071f6b8473cd5b5db20f95.json  query-32dfa27660ab4d7a148cd8406536926a88767897b24e89a23fb469c7ac4a5c54.json  query-46de4040caa4854435836badd17d0d0e1c284d0b203ae6aadb7138b2b84b94b3.json  query-4a89a2b2e28717668705fdb6a5b8c08f25f56f3c6e5ba6f2e1574137aadb2253.json  query-51532dce69aad02081fb9f68dfee0def60fb3c4a5a86c47f5ae88718ebf99c76.json  query-5de78e075d30273fc319f0ef7ed798c5f1d853493ac7690d94cde6b8e8d4e00c.json  query-626ace15361f972d6c4ce91041289dc77563a974add1caeb61ab9ad520c1a2d3.json  query-63bd4d46ddb1c725764163f709c2b85eccd9d9f5d4fdc3be154429cd25f74da4.json  query-6c5509b758d0ad47ad3f409fdf0edde704196cdd0d7051c278cd86fa0abd445c.json  query-6d67feae1ed868812971c16382e9da115a85db4f32310547d692372a4e108273.json  query-8028eee89068e9dbc7107d2dfdd12781f717546b4fc42752dba9c4a0c0c9e644.json  (+25 more)
migrations/: 20250913215456_create_users_table.sql
src/: main.rs
(+64 files in other folders)
